syntax = "proto3";
package apipb;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";

message User {
    string name = 1;
    string password = 2;
}

service UserService {
    rpc AddUser (AddUserRequest) returns (AddUserResponse) {
        option (google.api.http) = {
            post: "/adduser"
            body: "*"
        };
    };
    rpc GetUser (GetUserRequest) returns (GetUserResponse){
        option (google.api.http) = {
            post: "/getuser"
            body: "*"
        };
    };
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/login"
            body: "*"
        };
    };
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {
        option (google.api.http) = {
            get: "/healthcheck"
        };
    };
}

message AddUserRequest {
    User user = 1;
}
message AddUserResponse{}

message GetUserRequest {
    string username = 1;
}
message GetUserResponse{
    User user = 1;
}

message LoginRequest {
    User user = 1;
}

message LoginResponse {
    string token = 1;
}

message DeleteUserRequest {
    string username = 1;
}
message DeleteUserResponse{}

message HealthCheckRequest{}
message HealthCheckResponse{}